--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         </div>
         <input type ="submit" value="Send" class="hidden" id="submit">
     </form>
-    <script type="text/javascript" src="JS/script.js"></script>
+    <script type="text/javascript" src="Js/script.js"></script>
 </body>
 </html>
